# snapconfig

./: .gitignore  Cargo.toml  LICENSE  Pipfile  README.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  parsers.rs  value.rs
tests/: test_snapconfig.py
