[package]
name = "snapconfig"
version = "0.3.0"
edition = "2021"
description = "Fast zero-copy config file loading for Python"

[lib]
name = "snapconfig"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rkyv = { version = "0.7", features = ["validation"] }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
simd-json = "0.14"
serde_yaml = "0.9"
toml = "0.8"
rust-ini = "0.21"
dotenvy = "0.15"
thiserror = "1.0"
tempfile = "3.10"
bytecheck = "0.6.12"

[dev-dependencies]
